--- a/templates/website/appointment.html
+++ b/templates/website/appointment.html
@@ -10,45 +10,6 @@
             </div>
         </div>
     </section>
-    <section class="service_section bg-grey padding">
-        <div class="container">
-            <div class="section_heading text-center mb-40 wow fadeInUp" data-wow-delay="300ms">
-                <h3>Trendy Salon &amp; Spa</h3>
-                <h2>Our Services</h2>
-                <div class="heading-line"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 sm-padding wow fadeInUp" data-wow-delay="200ms">
-                    <div class="service_box">
-                        <i class="bs bs-scissors-1"></i>
-                        <h3>Haircut Styles</h3>
-                        <p>Barber is a person whose occupation is mainly to cut dress style.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 sm-padding wow fadeInUp" data-wow-delay="300ms">
-                    <div class="service_box">
-                        <i class="bs bs-razor-2"></i>
-                        <h3>Beard Triming</h3>
-                        <p>Barber is a person whose occupation is mainly to cut dress style.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 sm-padding wow fadeInUp" data-wow-delay="400ms">
-                    <div class="service_box">
-                        <i class="bs bs-brush"></i>
-                        <h3>Smooth Shave</h3>
-                        <p>Barber is a person whose occupation is mainly to cut dress style.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 sm-padding wow fadeInUp" data-wow-delay="500ms">
-                    <div class="service_box">
-                        <i class="bs bs-hairbrush-1"></i>
-                        <h3>Face Masking</h3>
-                        <p>Barber is a person whose occupation is mainly to cut dress style.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="book_section padding">
         <div class="book_bg"></div>
         <div class="map_pattern"></div>
@@ -78,7 +39,7 @@
                                     placeholder="Your Phone No" required>
                             </div>
                             <div class="col-md-6 padding-10">
-                                <input type="text" id="app_free_time" name="app_free_time" class="form-control"
+                                <input type="date" id="app_free_time" name="app_free_time" class="form-control"
                                     placeholder="Your Free Time" required>
                             </div>
                         </div>
