--- a/templates/website/appointment.html
+++ b/templates/website/appointment.html
@@ -16,8 +16,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-6">
-                    <form action="appointment.php" method="post" id="appointment_form"
+                   <form action="{% url 'website:appointment' %}" method="post" 
                         class="form-horizontal appointment_form">
+                        {%csrf_token%}	
+                        <input type="hidden" name="email" value={{request.user.email}}>
                         <div class="book_content">
                             <h2>Make an appointment</h2>
                             <p>Barber is a person whose occupation is mainly to cut dress groom <br>style and shave
@@ -25,27 +27,27 @@
                         </div>
                         <div class="form-group row">
                             <div class="col-md-6 padding-10">
-                                <input type="text" id="app_name" name="app_name" class="form-control" placeholder="Name"
-                                    required>
+                                <input type="text" id="app_name" name="name" class="form-control" placeholder="Name" value="{{user.get_full_name}}"  required>
                             </div>
                             <div class="col-md-6 padding-10">
-                                <input type="email" id="app_email" name="app_email" class="form-control"
-                                    placeholder="Your Email" required>
+                                <input type="text" id="app_phone" name="phoneNumber" class="form-control"
+                                    placeholder="Your Phone No" required>
                             </div>
                         </div>
                         <div class="form-group row">
+
                             <div class="col-md-6 padding-10">
-                                <input type="text" id="app_phone" name="app_phone" class="form-control"
-                                    placeholder="Your Phone No" required>
+                                <input type="date" id="app_free_time" name="date" class="form-control"
+                                    placeholder="Your Free Time" required>
                             </div>
                             <div class="col-md-6 padding-10">
-                                <input type="date" id="app_free_time" name="app_free_time" class="form-control"
+                                <input type="time" id="app_free_time" name="time" class="form-control"
                                     placeholder="Your Free Time" required>
                             </div>
                         </div>
                         <div class="form-group row">
                             <div class="col-md-6 padding-10">
-                                <select class="form-control" id="app_services" name="app_services">
+                                <select class="form-control" id="app_services" name="service">
                                     <option>Services</option>
                                     <option>Hair Styling</option>
                                     <option>Shaving</option>
@@ -55,7 +57,7 @@
                                 </select>
                             </div>
                             <div class="col-md-6 padding-10">
-                                <select class="form-control" id="app_barbers" name="app_barbers">
+                                <select class="form-control" id="app_barbers" name="barber">
                                     <option>Choose Barbers</option>
                                     <option>Michel Brown</option>
                                     <option>Jonathan Smith</option>
@@ -64,8 +66,7 @@
                                 </select>
                             </div>
                         </div>
-                        <button id="app_submit" class="default_btn" type="submit">Make Appointment</button>
-                        <div id="msg-status" class="alert" role="alert"></div>
+                        <button class="default_btn" type="submit">Make Appointment</button>
                     </form>
                 </div>
             </div>
