--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load website_template_tags %}
 {% block body %}
 
     <section class="slider_section">
@@ -112,57 +113,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-6">
-                    <form action="appointment.php" method="post" id="appointment_form"
-                        class="form-horizontal appointment_form">
-                        <div class="book_content">
-                            <h2>Make an appointment</h2>
-                            <p>Barber is a person whose occupation is mainly to cut dress groom <br>style and shave
-                                men's and boys hair.</p>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-md-6 padding-10">
-                                <input type="text" id="app_name" name="app_name" class="form-control" placeholder="Name"
-                                    required>
-                            </div>
-                            <div class="col-md-6 padding-10">
-                                <input type="email" id="app_email" name="app_email" class="form-control"
-                                    placeholder="Your Email" required>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-md-6 padding-10">
-                                <input type="text" id="app_phone" name="app_phone" class="form-control"
-                                    placeholder="Your Phone No" required>
-                            </div>
-                            <div class="col-md-6 padding-10">
-                                <input type="text" id="app_free_time" name="app_free_time" class="form-control"
-                                    placeholder="Your Free Time" required>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-md-6 padding-10">
-                                <select class="form-control" id="app_services" name="app_services">
-                                    <option>Services</option>
-                                    <option>Hair Styling</option>
-                                    <option>Shaving</option>
-                                    <option>Face Mask</option>
-                                    <option>Hair Wash</option>
-                                    <option>Beard Triming</option>
-                                </select>
-                            </div>
-                            <div class="col-md-6 padding-10">
-                                <select class="form-control" id="app_barbers" name="app_barbers">
-                                    <option>Choose Barbers</option>
-                                    <option>Michel Brown</option>
-                                    <option>Jonathan Smith</option>
-                                    <option>Jack Tosan</option>
-                                    <option>Martin Lane</option>
-                                </select>
-                            </div>
-                        </div>
-                        <button id="app_submit" class="default_btn" type="submit">Make Appointment</button>
-                        <div id="msg-status" class="alert" role="alert"></div>
-                    </form>
+
+                {%include 'website/appointment_form.html'%}
+
+
                 </div>
             </div>
         </div>
@@ -335,57 +289,6 @@
             </div>
         </div>
     </section>
-    <section class="blog-section bd-bottom padding">
-        <div class="container">
-            <div class="section-heading text-center mb-40 wow fadeInUp" data-wow-delay="300ms">
-                <h3>From Blog</h3>
-                <h2>A Good Newspaper Is A <br> Nation Talking To Itself</h2>
-            </div>
-            <div class="row blog-wrap">
-                <div class="col-lg-4 col-md-6 sm-padding wow fadeInUp" data-wow-delay="200ms">
-                    <div class="blog-item">
-                        <div class="blog-thumb">
-                            <img src="{% static 'img/post-1.jpg' %}" alt="post">
-                            <span class="category"><a href="#">interior</a></span>
-                        </div>
-                        <div class="blog-content">
-                            <h3><a href="#">Minimalist trending in modern architecture 2019</a></h3>
-                            <p>Building first evolved out dynamics between needs means available building materials
-                                attendant skills.</p>
-                            <a href="#" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 sm-padding wow fadeInUp" data-wow-delay="300ms">
-                    <div class="blog-item">
-                        <div class="blog-thumb">
-                            <img src="{% static 'img/post-2.jpg' %}" alt="post">
-                            <span class="category"><a href="#">Architecture</a></span>
-                        </div>
-                        <div class="blog-content">
-                            <h3><a href="#">Terrace in the town yamazaki kentaro design workshop.</a></h3>
-                            <p>Building first evolved out dynamics between needs means available building materials
-                                attendant skills.</p>
-                            <a href="#" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 sm-padding wow fadeInUp" data-wow-delay="400ms">
-                    <div class="blog-item">
-                        <div class="blog-thumb">
-                            <img src="{% static 'img/post-3.jpg' %}" alt="post">
-                            <span class="category"><a href="#">Design</a></span>
-                        </div>
-                        <div class="blog-content">
-                            <h3><a href="#">W270 house são paulo arquitetos fabio jorge architeqture.</a></h3>
-                            <p>Building first evolved out dynamics between needs means available building materials
-                                attendant skills.</p>
-                            <a href="#" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    {%lastespost%}
 	{% endblock %}
     
